tests/baselines/reference/invalidVoidAssignments.errors.txt
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(3,5): error TS2322: Type 'void' is not assignable to type 'boolean'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(4,5): error TS2322: Type 'void' is not assignable to type 'string'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(5,5): error TS2322: Type 'void' is not assignable to type 'number'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(9,5): error TS2322: Type 'void' is not assignable to type 'C'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(12,5): error TS2322: Type 'void' is not assignable to type 'I'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(14,5): error TS2322: Type 'number' is not assignable to type '{ baz: string; }'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(15,5): error TS2322: Type 'number' is not assignable to type '{ 0: number; }'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(18,1): error TS2631: Cannot assign to 'M' because it is a namespace.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(21,5): error TS2322: Type 'void' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(23,1): error TS2630: Cannot assign to 'i' because it is a function.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(26,1): error TS2322: Type 'typeof E' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(27,1): error TS2322: Type 'E' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts(29,1): error TS2322: Type '{ f(): void; }' is not assignable to type 'void'.


==== tests/cases/conformance/types/primitives/void/invalidVoidAssignments.ts (13 errors) ====
    var x: void;
    
    var a: boolean = x;
        ~
!!! error TS2322: Type 'void' is not assignable to type 'boolean'.
    var b: string = x;
        ~
!!! error TS2322: Type 'void' is not assignable to type 'string'.
    var c: number = x;
        ~
!!! error TS2322: Type 'void' is not assignable to type 'number'.
    var d: typeof undefined = x;
    
    class C { foo: string; }
    var e: C = x;
        ~
!!! error TS2322: Type 'void' is not assignable to type 'C'.
    
    interface I { bar: string; }
    var f: I = x;
        ~
!!! error TS2322: Type 'void' is not assignable to type 'I'.
    
    var g: { baz: string } = 1;
        ~
!!! error TS2322: Type 'number' is not assignable to type '{ baz: string; }'.
    var g2: { 0: number } = 1;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '{ 0: number; }'.
    
    module M { export var x = 1; }
    M = x;
    ~
!!! error TS2631: Cannot assign to 'M' because it is a namespace.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! error TS2322: Type 'void' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'void'.
    }
    i = x;
    ~
!!! error TS2630: Cannot assign to 'i' because it is a function.
    
    enum E { A }
    x = E;
    ~
!!! error TS2322: Type 'typeof E' is not assignable to type 'void'.
    x = E.A;
    ~
!!! error TS2322: Type 'E' is not assignable to type 'void'.
    
    x = { f() { } }
    ~
!!! error TS2322: Type '{ f(): void; }' is not assignable to type 'void'.